syntax = "proto3";

option csharp_namespace = "Protos.ActionRights.GetActionRights";

package getactionrights;

message GetActionRightsResponse {
  repeated ActionRight Rights = 1;
}

message ActionRight {
  string Id = 1;
  string UserId = 2;
  string ActionId = 3;
  repeated string Roles = 5;
}
